--- a/.env
+++ b/.env
@@ -5,11 +5,11 @@ APP_LOG_LEVEL=error
 APP_URL=http://objectmanager.test
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=dbinstance.clbtdsnoqqrs.us-east-2.rds.amazonaws.com
 DB_PORT=3306
 DB_DATABASE=saaldigital
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=DbinstanceMasterPWD$
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
